--- a/TheSDKShop/TheSDKShop.Infrastructure/TheSDKShop.Infrastructure.csproj
+++ b/TheSDKShop/TheSDKShop.Infrastructure/TheSDKShop.Infrastructure.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TheSDKShop.Domain\TheSDKShop.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
